src/styles.scss
/* You can add global styles to this file, and also import other style files */

html, body { height: 100%; }
body { margin: 0; font-family: "Helvetica Neue", sans-serif; }

.form-full-width {
  padding: 20px;
}

.input-full-width {
  width: 320px;
}

.mat-form-field-label-wrapper .mat-icon {
  vertical-align: middle !important;
}

.modal-backdrop {
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
} 

.mat-dialog-container {
  border-radius: 16px;
  background-color:rgba(255, 255, 255, 1);
  backdrop-filter: blur(10px);
}

.mat-dialog-actions {
  justify-content: space-between;
  margin-bottom: -16px !important;
}


@media only screen and (max-width: 600px) {
  .mat-dialog-actions {
      flex-wrap: nowrap !important;
  }

}
.mat-button-focus-overlay {
  background: pink;
}
.mat-stroked-button {
  border-color:rgba(0, 0, 0, 1) !important;
}

.primary {
  border-color: #D52A9F !important;
  color:#D52A9F;
}

.twitter {
  &.mat-button-focus-overlay {
    background: rgb(192, 227, 255);
  }
  
  border-color: #2a96d5 !important;
  color:#2a96d5;
}

.mat-focused .mat-form-field-label {
  /*change color of label*/
  color: #D52A9F !important;
 }

// .mat-form-field-underline {
//   /*change color of underline*/
//   background-color: #D52A9F !important;
// } 

.mat-form-field-ripple {
 /*change color of underline when focused*/
 background-color: #D52A9F !important;
}

